Archive2/d6/b07ef99bfeb4cd/output
main.cpp: In function 'uint8_t foo(uint8_t)':
main.cpp:6:16: warning: conversion to 'uint8_t {aka unsigned char}' from 'long int' may alter its value [-Wconversion]
     return bar + 134125154523;
                ^
main.cpp: In function 'int main()':
main.cpp:11:16: error: expected ')' before 'PRId8'
     printf("%" PRId8 "\n", foo(100));
                ^
